# covidwire

./: README.md
api/: pyproject.toml
api/api/: run.py
daq/: app.py  generate_training_set.py  load_labeled_examples.py  pyproject.toml  requirements.txt
daq/assets/: style.css
daq/daq/: app.py
geotagger/: .env  build.sh  hello.tex  install.sh  pyproject.toml  requirements.txt
geotagger/geotagger/: .cache.dill  run.py
ner/: pyproject.toml
ner/ner/: common.py  run.py
spider/: install.sh  pyproject.toml
spider/spider/: .experimental-bad.dill  async_utils.py  common.py  covidwire-overview.md  crawl_sitemaps.py  experimental.py  experimental2.py  parse_responses.py  process_queue.py  run.sh  utils.py
