[tool.poetry]
name = "covidwire-daq"
version = "0.1.0"
description = "Front-end web application for collecting article annotations"
authors = ["Kevin Zeidler <kzeidler@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
dash = "^1.14.0"
plotly = "^4.9.0"
dash-bootstrap-components = "^0.10.4"
dash-core-components = "^1.10.2"
dash-daq = "^0.5.0"
numpy = "^1.19.1"
dataset = "^1.3.2"
flask = "^1.1.2"
requests = "^2.24.0"
more-itertools = "^8.4.0"
spacy = "^2.3.2"
pandas = "^1.1.1"
dash-colorscales = "^0.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
