[tool.poetry]
name = "covidwire-geotagger"
version = "0.1.0"
description = ""
authors = ["Kevin Zeidler <kzeidler@gmail.com>"]

[tool.poetry.dependencies]
python = "3.6.9"
tensorflow = "2.3.0"
tensorboard = "2.3.0"
ktrain = "0.21.3"
Keras = "2.4.3"
transformers = "3.1.0"
torch = "1.6.0"
torchtext = "0.3.1"
keras-bert = "0.86.0"
keras-embed-sim = "0.8.0"
keras-layer-normalization = "0.14.0"
keras-multi-head = "0.27.0"
keras-pos-embd = "0.11.0"
keras-position-wise-feed-forward = "0.6.0"
keras-Preprocessing = "1.1.2"
keras-self-attention = "0.46.0"
keras-transformer = "0.38.0"
textdistance = "^4.1.0"
cupy-cuda101 = "7.4.0"
shapely = "^1.7.0"
munch = "^2.5.0"
numpy = "^1.18.5"
googlemaps = "^4.4.1"
plotly = "^4.8.1"
pyproj = "^2.6.1"
pyxdameraulevenshtein = "^1.6"
gemeinsprache = "^0.1.0"
termcolor = "^1.1.0"
geopy = "^1.22.0"
pandas = "^1.0.5"
dataset = "^1.3.1"
psycopg2 = "^2.8.5"
dill = "^0.3.2"
rich = "^2.2.5"
metadata_parser = "^0.10.0"
flatdict = "^4.0.1"
ptpython = "^3.0.5"
jupyter = "^1.0.0"
tensorflow-addons = "0.8.3"
tensorflow-estimator = "2.3.0"
tensorflow-hub = "0.9.0"
tensorflow-metadata = "0.23.0"
tensorflow-privacy = "0.2.2"
tensorflow-probability = "0.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
