[tool.poetry]
name = "covidwire-ner"
version = "0.1.0"
description = ""
authors = ["Kevin Zeidler <kzeidler@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
allennlp = "^1.0.0"
psycopg2 = "^2.8.5"
dataset = "^1.3.1"
gemeinsprache = "^0.1.0"
allennlp-models = "1.0.0"
termcolor = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
